--- a/package.json
+++ b/package.json
@@ -9,9 +9,11 @@
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "@uiball/loaders": "^1.2.6",
     "bootstrap": "^5.2.2",
     "bootstrap-icons": "^1.9.1",
     "eslint-plugin-react-hooks": "^4.3.0",
+    "firebase": "^9.14.0",
     "mdb-react-ui-kit": "^4.2.0",
     "react": "^18.2.0",
     "react-bootstrap": "^2.5.0",
@@ -21,7 +23,7 @@
     "react-scripts": "5.0.1",
     "sass": "^1.55.0",
     "web-vitals": "^2.1.4"
-  }, 
+  },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
