--- a/package.json
+++ b/package.json
@@ -14,7 +14,9 @@
     "bootstrap-icons": "^1.9.1",
     "eslint-plugin-react-hooks": "^4.3.0",
     "firebase": "^9.14.0",
+    "install": "^0.13.0",
     "mdb-react-ui-kit": "^4.2.0",
+    "npm": "^9.1.2",
     "react": "^18.2.0",
     "react-bootstrap": "^2.5.0",
     "react-dom": "^18.2.0",
@@ -22,6 +24,7 @@
     "react-router-dom": "^6.4.3",
     "react-scripts": "5.0.1",
     "sass": "^1.55.0",
+    "sweetalert2": "^11.6.9",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
