--- a/package.json
+++ b/package.json
@@ -21,13 +21,13 @@
     "react-bootstrap": "^2.5.0",
     "react-dom": "^18.2.0",
     "react-native-web": "^0.18.10",
-    "react-router-dom": "^6.4.3",
-    "react-scripts": "5.0.1",
+    "react-router-dom": "^6.15.0",
+    "react-scripts": "^5.0.1",
     "sass": "^1.55.0",
     "sweetalert2": "^11.6.9",
     "web-vitals": "^2.1.4"
   },
-  "scripts": { 
+  "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
